[Add] Add image to welcome page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,6 @@
+// ==========================================================================
+// Foundation
+// ==========================================================================
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
@@ -14,3 +17,25 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+
+// ==========================================================================
+// Layout
+// ==========================================================================
+
+// ==========================================================================
+// Object
+// ==========================================================================
+
+// -----------------------------------------------------------------
+// Component
+// -----------------------------------------------------------------
+
+// -----------------------------------------------------------------
+// Project
+// -----------------------------------------------------------------
+
+@import "./object/project/welcome"
+
+// -----------------------------------------------------------------
+// Utility
+// -----------------------------------------------------------------
