[Add] Add style to header

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,11 @@
 // Layout
 // ==========================================================================
 
+// Header
+@import "./layout/header";
+@import "./layout/_main";
+
+
 // ==========================================================================
 // Object
 // ==========================================================================
@@ -34,7 +39,7 @@
 // Project
 // -----------------------------------------------------------------
 
-@import "./object/project/welcome"
+@import "./object/project/welcome";
 
 // -----------------------------------------------------------------
 // Utility
