--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8107,6 +8107,71 @@ button.close {
   }
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.header__title-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__title-area a {
+  text-decoration: none;
+}
+
+.header__title {
+  margin: 0 0 0 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  line-height: 70px;
+  margin: 0;
+}
+
+.header__menu li {
+  height: 100%;
+  padding: 0 10px;
+  -webkit-transition: background-color 0.4s ease 0.2s;
+  transition: background-color 0.4s ease 0.2s;
+}
+
+.header__menu li:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.header__menu li > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  color: #333;
+  text-decoration: none;
+}
+
+.wrapper {
+  margin-top: 70px;
+}
+
 .welcome-header {
   min-height: 100vh;
   background-image: url("../../../images/welcome.jpg");
