--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,11 +35,14 @@
 // Component
 // -----------------------------------------------------------------
 
+@import "./object/component/pjcard";
+
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
 
 @import "./object/project/welcome";
+@import "./object/project/pjlist";
 
 // -----------------------------------------------------------------
 // Utility
