--- a/resources/assets/sass/layout/_header.scss
+++ b/resources/assets/sass/layout/_header.scss
@@ -5,7 +5,8 @@
   justify-content: space-between;
   width: 100%;
   height: 70px;
-  background-color: rgba(0,0,0,0.1);
+  // background-color: rgba(0,0,0,0.1);
+  background-color: #000000;
 }
 
 .header__title-area {
@@ -19,7 +20,7 @@
 .header__title {
   margin: 0 0 0 20px;
   font-weight: bold;
-  color: #333;
+  color: #FFF;
 }
 
 .header__menu {
@@ -32,14 +33,14 @@
     transition: background-color 0.4s ease 0.2s;
   }
   li:hover {
-    background-color: rgba(0,0,0,0.2);
+    background-color: #333;
   }
   li > a {
     display: block;
     width: 100%;
     height: 100%;
     font-size: 18px;
-    color: #333;
+    color: #FFF;
     text-decoration: none;
   }
 }
