[Add] Add style to each page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -38,6 +38,7 @@
 
 @import "./object/component/pjcard";
 @import "./object/component/pjform";
+@import "./object/component/profform";
 @import "./object/component/button";
 @import "./object/component/msgcard";
 @import "./object/component/sidebar";
@@ -51,6 +52,10 @@
 @import "./object/project/pjlist";
 @import "./object/project/pjdetail";
 @import "./object/project/mypage";
+@import "./object/project/dmroom";
+@import "./object/project/pjposted";
+@import "./object/project/pjapplied";
+@import "./object/project/pubmessages";
 
 
 // -----------------------------------------------------------------
