--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,6 +53,11 @@ table {
   border-spacing: 0;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -8177,6 +8182,10 @@ button.close {
   margin-top: 70px;
 }
 
+.l-sidebar {
+  min-height: 100vh;
+}
+
 .l-footer {
   width: 100%;
   height: 60px;
@@ -8220,6 +8229,10 @@ button.close {
   color: gray;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+.c-pjcard__title {
+  margin: 0 0 10px;
 }
 
 .c-pjcard__terms {
@@ -8273,6 +8286,10 @@ textarea {
   color: red;
 }
 
+.c-pjform {
+  padding: 20px;
+}
+
 .button {
   border-radius: 20px;
   display: inline-block;
@@ -8310,6 +8327,7 @@ textarea {
 }
 
 .c-sidebar {
+  width: 200px;
   height: 100%;
   background-color: rgba(33, 110, 110, 0.2);
 }
@@ -8402,4 +8420,40 @@ textarea {
 
 .p-mypage__wrapper {
   padding: 20px;
+}
+
+.p-dmrooms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.p-pjposted {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.p-pjposted__wrapper {
+  padding: 30px;
+}
+
+.p-pjposted__title {
+  margin: 0 0 15px;
+}
+
+.p-pjapplied {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.p-pubmessages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
 }
