[Add] Add public messages list

--- a/resources/assets/sass/object/project/_pjapplied.scss
+++ b/resources/assets/sass/object/project/_pjapplied.scss
@@ -1,4 +1,10 @@
 .p-pjapplied {
   display: flex;
   min-height: 100vh;
+  width: 100%;
+}
+
+.p-pjapplied__wrapper {
+  width: 100%;
+  padding: 30px;
 }
