--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8359,6 +8359,7 @@ textarea {
 }
 
 .p-pjlist {
+  width: 100%;
   padding: 30px;
 }
 
@@ -8384,8 +8385,12 @@ textarea {
   color: #fff;
 }
 
+.p-pjdetail {
+  padding: 30px;
+}
+
 .p-pjdetail__title {
-  margin: 40px 0 30px;
+  margin: 20px 0 30px;
   line-height: 36px;
   font-size: 2.2rem;
   font-weight: bold;
@@ -8403,6 +8408,10 @@ textarea {
 
 .p-pjdetail__message__title {
   margin: 0 0 20px;
+}
+
+.p-pjdetail__btn {
+  text-align: center;
 }
 
 .p-mypage {
@@ -8449,6 +8458,12 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh;
+  width: 100%;
+}
+
+.p-pjapplied__wrapper {
+  width: 100%;
+  padding: 30px;
 }
 
 .p-pubmessages {
@@ -8456,4 +8471,12 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh;
+}
+
+.u-w100 {
+  width: 300px;
+}
+
+.u-fs16 {
+  font-size: 16px;
 }
