--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -61,3 +61,5 @@
 // -----------------------------------------------------------------
 // Utility
 // -----------------------------------------------------------------
+
+@import "./object/utility/size";
