--- a/resources/assets/sass/object/project/_pjdetail.scss
+++ b/resources/assets/sass/object/project/_pjdetail.scss
@@ -1,5 +1,9 @@
+.p-pjdetail {
+  padding: 30px;
+}
+
 .p-pjdetail__title {
-  margin: 40px 0 30px;
+  margin: 20px 0 30px;
   line-height: 36px;
   font-size: 2.2rem;
   font-weight: bold;
@@ -17,4 +21,8 @@
 
 .p-pjdetail__message__title {
   margin: 0 0 20px;
+}
+
+.p-pjdetail__btn {
+  text-align: center;
 }
