--- a/resources/assets/sass/object/component/_profform.scss
+++ b/resources/assets/sass/object/component/_profform.scss
@@ -1,3 +1,12 @@
-.c-pjform {
+.c-profform {
   padding: 20px;
+}
+
+.c-profform__formgroup {
+  margin-bottom: 20px;
+}
+
+.c-profform__input {
+  display: block;
+  width: 300px;
 }
