--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8210,21 +8210,21 @@ button.close {
           box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.c-pjcard a {
+.c-pjcard > a {
   color: #4e4d4d;
 }
 
-.c-pjcard a h2 {
+.c-pjcard > a h2 {
   line-height: 1.4;
   font-size: 20px;
   font-weight: 600;
 }
 
-.c-pjcard a h2:hover {
+.c-pjcard > a h2:hover {
   color: black;
 }
 
-.c-pjcard a:hover {
+.c-pjcard > a:hover {
   text-decoration: none;
   color: gray;
   -webkit-transform: scale(1.1);
@@ -8250,6 +8250,10 @@ button.close {
 
 .c-pjcard__note dt {
   margin-right: 10px;
+}
+
+.c-pjform {
+  padding: 30px;
 }
 
 .c-pjform label,
