--- a/resources/assets/sass/object/project/_pjlist.scss
+++ b/resources/assets/sass/object/project/_pjlist.scss
@@ -3,22 +3,9 @@
   padding: 30px;
 }
 
-.p-pjlist__fixedlink {
-  display: block;
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
-  text-align: center;
-  background-color: rgba(33, 110, 110, 0.9);
-  border-radius: 50%;
-  font-size: 22px;
-  color: #fff;
-  box-shadow: 4px 4px 2px rgba(33, 110, 110, 0.4);
-  &:hover {
-    text-decoration: none;
-    color: #fff;
+.p-pjlist__filter {
+  margin: 30px 0;
+  label {
+    margin-right: 15px;
   }
 }
