--- a/resources/assets/sass/object/project/_mypage.scss
+++ b/resources/assets/sass/object/project/_mypage.scss
@@ -12,3 +12,10 @@
 .p-mypage__wrapper {
   padding: 20px;
 }
+
+.p-mypage__image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
