[Fix] Fix bug for each page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,7 @@
 @import "./object/component/button";
 @import "./object/component/msgcard";
 @import "./object/component/sidebar";
+@import "./object/component/dmcard";
 
 
 // -----------------------------------------------------------------
@@ -56,6 +57,10 @@
 @import "./object/project/pjposted";
 @import "./object/project/pjapplied";
 @import "./object/project/pubmessages";
+@import "./object/project/dms";
+@import "./object/project/dmroom";
+
+
 
 
 // -----------------------------------------------------------------
