--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8440,6 +8440,11 @@ textarea {
   color: #FFFFFF;
 }
 
+.button--twitter {
+  background-color: #1BA1F1;
+  color: #FFFFFF;
+}
+
 .c-msgcard {
   margin-bottom: 15px;
   background-color: #F4F8FA;
@@ -8476,6 +8481,32 @@ textarea {
   color: #000000;
   font-size: 18px;
   text-decoration: none;
+}
+
+@media (max-width: 580px) {
+  .c-sidebar {
+    display: none;
+  }
+}
+
+.c-dmcard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 0;
+}
+
+.c-dmcard__image {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+.c-dmcard__user {
+  font-weight: bold;
+  margin-right: 10px;
+  font-size: 15px;
 }
 
 .welcome-header {
@@ -8551,11 +8582,8 @@ textarea {
   margin-bottom: 30px;
 }
 
-.p-dmrooms {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100vh;
+.p-dmroom {
+  padding: 20px;
 }
 
 .p-pjposted {
@@ -8591,6 +8619,21 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh;
+}
+
+.p-dms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.p-dms__content {
+  padding: 0 20px;
+}
+
+.p-dmroom {
+  padding: 20px;
 }
 
 .u-w100 {
