--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8582,6 +8582,14 @@ textarea {
   margin-bottom: 30px;
 }
 
+.p-mypage__noimage {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+  background-image: url("../../../images/welcome.jpg");
+}
+
 .p-dmroom {
   padding: 20px;
 }
