--- a/resources/assets/sass/object/project/_mypage.scss
+++ b/resources/assets/sass/object/project/_mypage.scss
@@ -20,3 +20,13 @@
   border-radius: 50%;
   margin-bottom: 30px;
 }
+
+.p-mypage__noimage {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+  background-image: url('../../../images/welcome.jpg');
+}
+
+
