[Fix] Fix bug for dup elm in login page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8644,6 +8644,14 @@ textarea {
   padding: 20px;
 }
 
+.p-auth__content {
+  position: static;
+}
+
+.p-auth__static {
+  position: static;
+}
+
 .u-w100 {
   width: 300px;
 }
