--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -59,6 +59,7 @@
 @import "./object/project/pubmessages";
 @import "./object/project/dms";
 @import "./object/project/dmroom";
+@import "./object/project/auth";
 
 
 
