--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8456,6 +8456,8 @@ textarea {
 .c-msgcard__body {
   font-size: 18px;
   margin-bottom: 5px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .c-sidebar {
@@ -8509,6 +8511,11 @@ textarea {
   font-size: 15px;
 }
 
+.c-dmcard__message {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 .welcome-header {
   min-height: 100vh;
   background-image: url("../../../images/welcome.jpg");
@@ -8558,11 +8565,20 @@ textarea {
   text-align: center;
 }
 
+.p-pjdetail__desc {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 .p-mypage {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh;
+}
+
+.p-mypage dt {
+  margin-top: 10px;
 }
 
 .p-mypage__sidebar {
@@ -8588,6 +8604,11 @@ textarea {
   border-radius: 50%;
   margin-bottom: 30px;
   background-image: url("../../../images/welcome.jpg");
+}
+
+.p-mypage__intro {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .p-dmroom {
