[Fix] Fix unable apply self project

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8563,6 +8563,12 @@ textarea {
 
 .p-pjdetail__btn {
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .p-pjdetail__desc {
