--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8366,6 +8366,18 @@ button.close {
   margin-right: 10px;
 }
 
+@media (max-width: 580px) {
+  .c-pjcard__terms {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .c-pjform {
   padding: 30px;
 }
@@ -8517,10 +8529,49 @@ textarea {
 }
 
 .welcome-header {
+  padding-top: 50px;
   min-height: 100vh;
   background-image: url("../../../images/welcome.jpg");
   background-size: cover;
   background-position: center;
+  position: relative;
+  z-index: -10000;
+}
+
+.welcome-header::before {
+  background: inherit;
+  content: '';
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  z-index: -9999;
+}
+
+.welcome-header p {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+}
+
+.p-welcome__btn {
+  position: absolute;
+  top: 400px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .p-pjlist {
@@ -8681,6 +8732,10 @@ textarea {
 
 .u-w100 {
   width: 300px;
+}
+
+.u-w200 {
+  width: 200px;
 }
 
 .u-fs16 {
