--- a/resources/assets/sass/object/project/_welcome.scss
+++ b/resources/assets/sass/object/project/_welcome.scss
@@ -1,6 +1,44 @@
 .welcome-header {
+  padding-top: 50px;
   min-height: 100vh;
   background-image: url('../../../images/welcome.jpg');
   background-size: cover;
   background-position: center;
+  position: relative;
+  z-index: -10000;
+}
+
+.welcome-header::before {
+  background: inherit;
+  content: '';
+  filter: blur(4px);
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  z-index: -9999;
+}
+
+.welcome-header p{
+  margin-top: 30px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+}
+
+.p-welcome__btn {
+  position: absolute;
+  top: 400px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+@media(max-width: 580px) {
+  
 }
