--- a/resources/assets/sass/object/project/_pjlist.scss
+++ b/resources/assets/sass/object/project/_pjlist.scss
@@ -4,8 +4,16 @@
 }
 
 .p-pjlist__filter {
+  display: flex;
   margin: 30px 0;
   label {
     margin-right: 15px;
+  }
+}
+
+@media(max-width: 580px) {
+  .p-pjlist__filter {
+    display: flex;
+    flex-direction: column;
   }
 }
